kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: herdless-web-svc
  namespace: default
spec:
  selector:
    app: herdless-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
