kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: herdless-web-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: <CERTIFICATE_ARN>
spec:
  rules:
    - host: herdlesscoffee.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: herdless-web-svc
                port:
                  number: 80
